# Android-DataBackup

./: .gitmodules  AGENTS.md  README.md
.github/workflows/: build.yaml  lint.yaml  release.yaml
docs/: backup-design.md  repository-first-todo.md
source/app/: build.gradle.kts
source/app/src/main/kotlin/com/xayah/databackup/: MainActivity.kt  SplashActivity.kt
source/app/src/main/res/values/: arrays.xml  strings.xml
source/app/src/main/res/values-zh-rCN/: strings.xml
source/core/data/src/main/res/values/: ids.xml
source/core/database/schemas/com.xayah.core.database.AppDatabase/: 10.json  8.json  9.json
source/core/database/src/main/kotlin/com/xayah/core/database/: AppDatabase.kt  DatabaseModule.kt
source/core/service/src/main/: AndroidManifest.xml
source/core/work/src/main/res/values/: ids.xml
source/feature/main/cloud/src/main/res/values/: ids.xml
source/feature/main/dashboard/src/main/res/values/: ids.xml
source/feature/main/history/src/main/res/values/: ids.xml
source/feature/main/processing/src/main/res/values/: ids.xml
source/feature/main/restore/src/main/res/values/: ids.xml  strings.xml
source/feature/main/settings/src/main/res/raw/: contributors.json
source/feature/main/settings/src/main/res/values/: ids.xml
source/gradle/: libs.versions.toml
source/native/: build.gradle.kts
source/native/build_bin/built_in/arm64-v8a/: rustic
source/native/src/main/jni/: CMakeLists.txt
source/native/src/main/jni/rustic/: Cargo.toml
source/native/src/main/jni/rustic/src/: main.rs
(+76 files in other folders)
